<resources>
    <string name="app_name">DesiredVacations</string>

    <string name="no_vacations_yet">There is Nothing in Desired Vacations List Yet.</string>
    <string name="add_vacation_btn_description">Add Vacation</string>
    <string name="vacation_btn_details">details</string>
    <string name="vacation_btn_edit">edit</string>

    <string name="add_vacation_dialog_name_hint">Desired Vacation Name</string>
    <string name="add_vacation_dialog_hotel_hint">Hotel Name</string>
    <string name="add_vacation_dialog_location_hint">Location</string>
    <string name="add_vacation_dialog_necessary_money">Necessary Money</string>
    <string name="add_vacation_dialog_description">Vacation Description</string>
    <string name="add_vacation_dialog_create_vacation">Create Vacation</string>

    <string name="edit_vacation_dialog_name_hint">New Desired Vacation Name</string>
    <string name="edit_vacation_dialog_hotel_hint">New Hotel Name</string>
    <string name="edit_vacation_dialog_location_hint">New Location</string>
    <string name="edit_vacation_dialog_necessary_money">Necessary Money</string>
    <string name="edit_vacation_dialog_description">New Vacation Description</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailed_vacation_upload_image_button_hint">Upload Image</string>
    <string name="detailed_vacation_edit_vacation_button_hint">Edit Vacation</string>
    <string name="detailed_vacation_image_hint">Vacation Image</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="hotel">Hotel</string>
    <string name="vacation_image">Vacation Image</string>
    <string name="edit_vacation">edit vacation</string>
    <string name="add_notification">Add notification</string>
    <string name="select_time">select time</string>
    <string name="set_notification">set notification</string>
    <string name="time">Time</string>
</resources>