<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.NotificationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNotificationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btnNotificationsSelectTime"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/select_time" />

        <Button
            android:id="@+id/btnNotificationsSet"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/set_notification" />
    </LinearLayout>
</layout>