<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.desiredvacations.ui.main.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editVacationDialogNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edit_vacation_dialog_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editVacationDialogNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editVacationDialogHotelNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edit_vacation_dialog_hotel_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacationDialogNameLayout"
            app:startIconDrawable="@drawable/ic_baseline_hotel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editVacationDialogHotelNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editVacationDialogLocationLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edit_vacation_dialog_location_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacationDialogHotelNameLayout"
            app:startIconDrawable="@drawable/ic_baseline_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editVacationDialogLocationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentVacation.location}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editVacationDialogDescriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/edit_vacation_dialog_location_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacationDialogHotelNameLayout"
            app:startIconDrawable="@drawable/ic_baseline_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editVacationDialogDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentVacation.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editVacationDialogPriceLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:hint="@string/edit_vacation_dialog_necessary_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacationDialogLocationLayout"
            app:startIconDrawable="@drawable/ic_baseline_money">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editVacationDialogPriceEditText"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@{viewModel.currentVacation.moneyNeeded}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEditVacation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/edit_vacation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVacationDialogPriceLayout"
            app:layout_constraintVertical_bias="0.7" />
    </LinearLayout>
</layout>
